WebCore/platform/graphics/GraphicsContext3D.h
@@ -73,6 +73,7 @@ namespace WebCore {
     class WebGLTexture;
     class Image;
     class ImageData;
+    class HostWindow;
 
     struct ActiveInfo {
         String name;
@@ -410,7 +411,7 @@ namespace WebCore {
             bool premultipliedAlpha;
         };
 
-        static PassOwnPtr<GraphicsContext3D> create(Attributes attrs);
+        static PassOwnPtr<GraphicsContext3D> create(Attributes attrs, HostWindow* hostWindow);
         virtual ~GraphicsContext3D();
 
 #if PLATFORM(MAC)
@@ -685,7 +686,7 @@ namespace WebCore {
         void synthesizeGLError(unsigned long error);
 
     private:        
-        GraphicsContext3D(Attributes attrs);
+        GraphicsContext3D(Attributes attrs, HostWindow* hostWindow);
 
         // Helpers for texture uploading.
         void premultiplyAlpha(unsigned char* rgbaData, int numPixels);
